sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:14: error: value isInt is not a member of Int
    gap = (getValueCount()/2).isInt
                              ^